--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,29 +20,29 @@
     <link rel="stylesheet" href="../chamber/styles/normalization.css">
     <title>Hudson Chamber of Commerce</title>
 </head>
-<header>
-    <div class="header-grid">
-        <div class="header-img-div"></div>
-                <img src="../chamber/images/hero.jpg" alt="logo">
-        <section>
-            <h1>Hudson Chamber of Commerce</h1>
-        </section>
-    </div>
-    <div class="social">
-        <a href="https://facebook.com" target="_blank">
-            <img src="../chamber/images/fb.png" alt="fb icon">
-        </a>
-    </div> 
-    <div class="social">   
-        <a href="https://www.linkedin.com/" target="_blank">
-            <img src="../chamber/images/linkdin.jpg" alt="in icon">
-        </a>
-    </div>
-    <div>
-        <button id="hamburgerBtn"></button>
-    </div>
-</header>
     <body>
+      <header>
+        <div class="header-grid">
+            <div class="header-img-div"></div>
+                    <img src="../chamber/images/hero.webp" alt="logo">
+            <section>
+                <h1>Hudson Chamber of Commerce</h1>
+            </section>
+        </div>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="../chamber/images/fb.png" alt="fb icon">
+            </a>
+        </div> 
+        <div class="social">   
+            <a href="https://www.linkedin.com/" target="_blank">
+                <img src="../chamber/images/linkdin.jpg" alt="in icon">
+            </a>
+        </div>
+        <div>
+            <button id="hamburgerBtn"></button>
+        </div>
+    </header>
       <nav>
         <ul class="navigation">
             <li><a href="../index.html">Home</a></li>
