--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <meta property="og:title" content="chamber of commerce">
-    <meta property="og:description" content="chamber layout for wdd 230">
-    <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/index.html">
-    <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
-    <meta property="og:type" content="website">
+    <meta property="OG:title" content="chamber of commerce">
+    <meta property="OG:description" content="chamber layout for wdd 230">
+    <meta property="OG:image" content="https://sethro552.github.io/wdd230/chamber/index.html">
+    <meta property="OG:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
+    <meta property="OG:type" content="website">
     <link rel="icon" href="../chamber/images/favicon.ico">
     <link rel="stylesheet" href="../chamber/styles/base.css">
     <link rel="stylesheet" href="../chamber/styles/larger.css">
