--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,10 +21,13 @@
     <title>Hudson Chamber of Commerce</title>
 </head>
     <body>
+      <div class="viewport">
+        <hr>
       <header>
-        <div class="header-grid">
-            <div class="header-img-div"></div>
-                    <img src="../chamber/images/hero.webp" alt="logo">
+        <a href="../wdd230/chamber/index.html">
+          <img class="logo" src="../chamber/images/hero.webp" alt="logo">
+        </a>
+        </header>
             <section>
                 <h1>Hudson Chamber of Commerce</h1>
             </section>
