--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../chamber/styles/normalization.css">
     <title>Hudson Chamber of Commerce</title>
 </head>
+
     <body>
       <div class="viewport">
         <hr>
@@ -28,9 +29,39 @@
           <img class="logo" src="../chamber/images/hero.webp" alt="logo">
         </a>
         </header>
-            <section>
+        <nav id="mainnav">
+          <ul>
+            <li class="hamburger" id="menubutton">
+              <img src="images/hamburger.webp"> 
+            </li>
+            <li class="menuItem"><a href="/chamber/index.html">Home</a></li>
+
+          </ul>
+          </nav>
+          <main>
+            <div class="banner">
+              <a href="" class=""></a>
+              </div>
+              <div class="textContent">
                 <h1>Hudson Chamber of Commerce</h1>
-            </section>
+                <p>We're devoted to supporting and promoting the original business community. Our thing is to help businesses
+                   network, grow, and thrive.</p>
+                   <br><br>
+                  Through our events, coffers, and advocacy, we aim to foster a strong and vibrant original frugality.
+                  Whether you're a small business proprietor, a large pot, or just someone looking to support your
+                  community, we drink you to join us.
+                  <br><br>
+                  Come a member moment and start enjoying the numerous benefits of Chamber class, including access to
+                  networking events, abatements on business services, and the occasion to have your voice heard on
+                  important issues affecting the business community.
+                </p>
+                </div> 
+        <div class="cards">
+          <h2>Events</h2>
+          <div class="card">
+            <picture>
+              <img src="images/hero.webp" alt="">
+            </picture>
         </div>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
@@ -48,7 +79,7 @@
     </header>
       <nav>
         <ul class="navigation">
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
         </ul>
     </nav>
         <main class="home-grid">
