--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,6 +28,19 @@
         <a href="../wdd230/chamber/index.html">
           <img class="logo" src="../chamber/images/hero.webp" alt="logo">
         </a>
+        <div class="social">
+          <a href="https://facebook.com" target="_blank">
+              <img src="../chamber/images/fb.png" alt="fb icon">
+          </a>
+      </div> 
+      <div class="social">   
+          <a href="https://www.linkedin.com/" target="_blank">
+              <img src="../chamber/images/linkdin.jpg" alt="in icon">
+          </a>
+      </div>
+      <div>
+          <button id="hamburgerBtn"></button>
+      </div>
         </header>
         <nav id="mainnav">
           <ul>
@@ -60,136 +73,115 @@
           <h2>Events</h2>
           <div class="card">
             <picture>
-              <img src="images/hero.webp" alt="">
+              <img src="EVENT 1" alt="">
+              </picture>
+              <div class="cardContent">
+                <h2>Event 1</h2>
+                <p>TEXT HERE</p>
+              </div>
+              </div>
+              <div class="card">
+                <picture>
+                  <img src="EVENT 1" alt="">
+                  </picture>
+                  <div class="cardContent">
+                    <h2>Event 2</h2>
+                    <p>TEXT HERE</p>
+                  </div>
+                  </div>
+                  <div class="card">
+                    <picture>
+                      <img src="EVENT 1" alt="">
+                      </picture>
+                      <div class="cardContent">
+                        <h2>Event 3</h2>
+                        <p>TEXT HERE</p>
+                      </div>
+                      </div>
+                      </div>
+                      <div class="card">
+                        <div class="cardContent">
+                            <h2>Current Weather</h2>
+                            <img src="" alt="icon" id="weather-icon" class="weatherIcon inline">
+                            <p id="current-temp" class="inline"></p>
+                            <p id="caption-desc" class="inline"></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="cardContent">
+                            <h2>TEXT HERE</h2>
+                            <img src="" alt="icon" id="weather-icon1" class="weatherIcon inline">
+                            <p id="current-temp1" class="inline"></p>
+                            <p id="caption-desc1" class="inline"></p>
+                        </div>
+                        <div class="cardContent">
+                            <img src="" alt="icon" id="weather-icon2" class="weatherIcon inline">
+                            <p id="current-temp2" class="inline"></p>
+                            <p id="caption-desc2" class="inline"></p>
+                        </div>
+                        <div class="cardContent">
+                            <img src="" alt="icon" id="weather-icon3" class="weatherIcon inline">
+                            <p id="current-temp3" class="inline"></p>
+                            <p id="caption-desc3" class="inline"></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="cards">
+                        <h2>Spotlights</h2>
+                        <div class="card">
+                            <picture>
+                                <img src="" alt="image" id="p1">
+                            </picture>
+                            <div class="cardContent">
+                                <h2 id="t1">Spotlight 1</h2>
+                                <p id="d1">TEXT HERE</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <picture>
+                                <img src="images/hero.png" alt="" id="p2">
+                            </picture>
+                            <div class="cardContent">
+                                <h2 id="t2">Spotlight 2</h2>
+                                <p id="d2">TEXT HERE</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <picture>
+                                <img src="images/hero.png" alt="" id="p3">
+                            </picture>
+                            <div class="cardContent">
+                                <h2 id="t3">Spotlight 3</h2>
+                                <p id="d3">TEXT HERE</p>
+                            </div>
+                        </div>
+                    </div>
+                </main>        
+              <img src="../images/hero.webp" alt="">
             </picture>
         </div>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="../chamber/images/fb.png" alt="fb icon">
-            </a>
-        </div> 
-        <div class="social">   
-            <a href="https://www.linkedin.com/" target="_blank">
-                <img src="../chamber/images/linkdin.jpg" alt="in icon">
-            </a>
-        </div>
-        <div>
-            <button id="hamburgerBtn"></button>
-        </div>
-    </header>
-      <nav>
-        <ul class="navigation">
-            <li><a href="/index.html">Home</a></li>
-        </ul>
-    </nav>
-        <main class="home-grid">
-            <div class="hero">
-                <img srcset="images/wdd230-org.webp" alt="wdd230-org">
-                <div class="join-button">
-                    <a href="join.html">Join the Chamber</a>
-                  </div>    
-            </div>
-            <div class="event">
-                <h2>Upcoming Events</h2>
-                <ul>
-                  <li>November 19th @ 2pm</li><br>
-                  <img srcset="images/event.webp" alt="event">
-                </ul>
-                <p>Join us for a meet and greet fun walk.</p>
+        <footer>
+          <div class="ftop">
+              <div class="ftopLeft">
+                  <h2>Chamber of Commerce</h2>
+                  <p>27 E. Main St.</p>
+                  <p>Hudson, Ohio 44236</p>
               </div>
-              <div class="weather">
-                <h2>Todays Weather</h2>
-                <div class="temp-div">
-                  <span id="temp"></span>°F
-                </div>
-                <div id="weather-type"></div>
-                <div id="weather-icon-div"></div>
-                <div>
-                  <div class="windspeed-div">
-                    Wind Speed: <span id="windspeed"></span> mph
-                  </div>
-                  <div class="windchill-div">
-                    Wind Chill: <span id="windchill"></span><span id="windchill-F"></span>
-                  </div>
-                </div>
+              <div class="ftopRight">
+                  <h2>Contact Information</h2>
+                  <p>hudsonchamber.org</p>
+                  <p>(330)-650-0261</p>
               </div>
-              <div class="news-release">
-                <h2>News</h2>
-                <p>We would like to thank all the donations for the spring fling backoff coming up on April 2nd.<br>
-                <br>
-                The yearly car show will take place at the expo center on April 8th at 2pm.</p>
-              </div>
-              <div class="spotlights">
-                <div class="spotlight1">
-                  <a href="https://www.ohiobmv.gov//" target="_blank" class="company-site"><img src="images/ohiobmv.jpg" alt="dmv" class="spotlight-img"></a>
-                  <div class="dmv info">
-                    <p class="dmv message">Contact the DMV</p>
-                    <p class="dmv phone">(844) 644-6268</p>
-                    <p class="dmv address">8039 Euclid Ave, Flipton, OH 44103</p>
-                  </div>
-                </div>
-                <div class="spotlight2">
-                  <a href="https://www.redcross.org/get-help/how-to-prepare-for-emergencies/types-of-emergencies/fire.html" target="blank"><img src="images/firesafety.jpg" alt="forest" class="spotlight-img"></a>
-                  <div class="rc info">
-                    <p class="rc web"><a href="https://www.redcross.org/contact-us.html" target="blank" class="rc contact">Fire Safety/American Red Cross</a></p>
-                  </div>
-                </div>
-                <div class="spotlight3">
-                  <a href="https://www.sba.gov/business-guide/launch-your-business/apply-licenses-permits/" target="blank"><img src="images/permit.jpg" alt="thank you logo" class="spotlight-img"></a>
-                  <div class="company-info">
-                    <a href="https://www.sba.gov/business-guide/launch-your-business/apply-licenses-permits/" target="blank" class="company-site">Apply for a Permit</a>
-                  </div>
-                </div>
-              </div>
-              <div class="join">
-                <div class="join-button">
-                  <a href="join.html">Join Us!</a>
-                </div>
-                <p>Join the Flipton Chamber and discover how the chamber can help you today.</p>
-              </div>
-        </main>
-<main>
-    <div id="hero">Hero Image</div>
-    <div id="action">Call to Action</div>
-    <div id="event">Current Events</div>
-    <div id="weather">Weather Card</div>
-    <div id="spotlight1">Spotlight 1</div>
-    <div id="spotlight2">Spotlight 2</div>
-    <div id="spotlight3">Spotlight 3</div>
-    </div>
-</main>
-<footer>
-  <section>
-      <div>
-          <img srcset="../chamber/images/hero.webp" alt="2nd logo">
-      </div>
-      <section>
-          <h2>Hudson Chamber of Commerce</h2>
-          <p>27 E Main St.</p>
-          <p>Hudson, OH 44236</p>
-      </section>
-  </section>
-  <section>
-      <p>hudsonchamber.org
-      <p>(330)-650-0621
-      <p><a href="https://www.google.com/maps/place/Hudson,+OH/@41.2400538,-81.5229622,12z/data=!3m1!4b1!4m6!3m5!1s0x8830d9cbde853a35:0x917582c24ff9d7ad!8m2!3d41.240056!4d-81.440667!16zL20vMHoyMnk?entry=ttu">Find us here!</a></p>
-  </section>
-  <hr>
-  <section>
-      <p>&copy;<span id="currentyear"></span> 2023 Hudson Chamber
-          <br> Seth Markle
-          <br>WDD 230 Project    
-          <p id="p1"></p>
-          <p class="last-update" id="lastModified"></p>
-          <p id="p1"></p>
-  </section>
-  <div id="datebox">
-      <p id="p1"></p>
-      <script>
-          var date = new Date();
-          document.getElementById("p1").innerHTML = date;
-      </script>
+          </div>
+          <div class="fbottom">
+              <span>© Fall 2023</span>
+              <span>Seth Markle</span>
+              <span>WDD 230</span>
+              <span id="moddate">Date Modified</span>
+          </div>
+      </footer>
   </div>
-</footer>
+  <script src="chamber/scripts/currentdate.js"></script>
 </body>
+
 </html>
