--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,9 +60,9 @@
                 <p>We're devoted to supporting and promoting the original business community. Our thing is to help businesses
                    network, grow, and thrive.</p>
                    <br><br>
-                  Through our events, coffers, and advocacy, we aim to foster a strong and vibrant original frugality.
-                  Whether you're a small business proprietor, a large pot, or just someone looking to support your
-                  community, we drink you to join us.
+                  Through our events, coffers, and advocacy, we aim to foster a strong and vibrant original small town feel.
+                  Whether you're a small business proprietor, a large corperation, or just someone looking to support your
+                  community, we want you to join us.
                   <br><br>
                   Come a member moment and start enjoying the numerous benefits of Chamber class, including access to
                   networking events, abatements on business services, and the occasion to have your voice heard on
@@ -72,30 +72,45 @@
         <div class="cards">
           <h2>Events</h2>
           <div class="card">
+            <h2>Young Professionals Network</h2>
             <picture>
-              <img src="EVENT 1" alt="">
+              <img src="/chamber/images/ypn.jpg" alt="young professionals network">
               </picture>
               <div class="cardContent">
-                <h2>Event 1</h2>
-                <p>TEXT HERE</p>
+                <p>December 7th, 2023</p>
+                <br>
+                <p>Join us for our young professionals seminar.  This seminar is designed
+                   to give outreach to the local youths of the area about potental job 
+                   opportunities.
+                </p>
               </div>
               </div>
               <div class="card">
+                <h2>Coffee and Connections</h2>
                 <picture>
-                  <img src="EVENT 1" alt="">
+                  <img src="/chamber/images/coffee.jpg" alt="coffeconnections">
                   </picture>
                   <div class="cardContent">
-                    <h2>Event 2</h2>
-                    <p>TEXT HERE</p>
+                    <p>December 19th, 2023</p>
+                    <br>
+                    <p>Come visit other local business leaders from around the Hudson
+                       area.  Come to chat, inquire, or to make new friends at this monthly
+                       event.
+                    </p>
                   </div>
                   </div>
                   <div class="card">
+                    <h2>Power Hour</h2>
                     <picture>
-                      <img src="EVENT 1" alt="">
+                      <img src="/chamber/images/powerhour.jpg" alt="">
                       </picture>
                       <div class="cardContent">
-                        <h2>Event 3</h2>
-                        <p>TEXT HERE</p>
+                        <p>December 21st, 2023</p>
+                        <br>
+                        <p>Want to beef up your portfolio or resume?  Come vist our power
+                           hour.  This is professional help from top employer scouts who 
+                           seeking out new employees.
+                        </p>
                       </div>
                       </div>
                       </div>
