--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,9 +45,9 @@
         <nav id="mainnav">
           <ul>
             <li class="hamburger" id="menubutton">
-              <img src="images/hamburger.webp"> 
+              <img src="../chamber/images/hamburger.webp"> 
             </li>
-            <li class="menuItem"><a href="/chamber/index.html">Home</a></li>
+            <li class="menuItem"><a href="../chamber/index.html">Home</a></li>
 
           </ul>
           </nav>
@@ -74,7 +74,7 @@
           <div class="card">
             <h2>Young Professionals Network</h2>
             <picture>
-              <img src="/chamber/images/ypn.jpg" alt="young professionals network">
+              <img src="../chamber/images/ypn.jpg" alt="young professionals network">
               </picture>
               <div class="cardContent">
                 <p>December 7th, 2023</p>
@@ -88,7 +88,7 @@
               <div class="card">
                 <h2>Coffee and Connections</h2>
                 <picture>
-                  <img src="/chamber/images/coffee.jpg" alt="coffeconnections">
+                  <img src="../chamber/images/coffee.jpg" alt="coffeconnections">
                   </picture>
                   <div class="cardContent">
                     <p>December 19th, 2023</p>
@@ -102,7 +102,7 @@
                   <div class="card">
                     <h2>Power Hour</h2>
                     <picture>
-                      <img src="/chamber/images/powerhour.jpg" alt="">
+                      <img src="../chamber/images/powerhour.jpg" alt="">
                       </picture>
                       <div class="cardContent">
                         <p>December 21st, 2023</p>
