--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <meta property="OG:title" content="chamber of commerce">
     <meta property="OG:description" content="chamber layout for wdd 230">
-    <meta property="OG:image" content="/chamber/images/hero.webp">
+    <meta property="OG:image" content="../chamber/images/hero.webp">
     <meta property="OG:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
     <meta property="OG:type" content="website">
     <link rel="icon" href="../chamber/images/favicon.ico">
