--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,6 +53,7 @@
           </nav>
           <main>
             <div class="banner">
+              <img srcset="../chamber/images/wdd230-org.webp">
               <a href="" class=""></a>
               </div>
               <div class="textContent">
