--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <meta property="OG:title" content="chamber of commerce">
-    <meta property="OG:description" content="chamber layout for wdd 230">
-    <meta property="OG:image" content="../chamber/images/hero.webp">
-    <meta property="OG:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
-    <meta property="OG:type" content="website">
+    <meta name="og:title" content="chamber of commerce">
+    <meta name="og:description" content="chamber layout for wdd 230">
+    <meta name="og:image" content="../chamber/images/hero.webp">
+    <meta name="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
+    <meta name="og:type" content="website">
     <link rel="icon" href="../chamber/images/favicon.ico">
     <link rel="stylesheet" href="../chamber/styles/base.css">
     <link rel="stylesheet" href="../chamber/styles/larger.css">
@@ -45,7 +45,7 @@
         <nav id="mainnav">
           <ul>
             <li class="hamburger" id="menubutton">
-              <img src="../chamber/images/hamburger.webp"> 
+              <img src="../chamber/images/hamburger.webp" alt="new image"> 
             </li>
             <li class="menuItem"><a href="../chamber/index.html">Home</a></li>
 
