--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <meta name="og:title" content="chamber of commerce">
+    <meta name="og:title" content="hudson ohio chamber of commerce">
     <meta name="og:description" content="chamber layout for wdd 230">
     <meta name="og:image" content="../chamber/images/hero.webp">
     <meta name="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
